# fsa-rabac

./: Makefile  README.md  envar_set.sh  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1c7964cb5378_customer_table.py  8ac49e12b70e_initial_tables.py  c68dcacdba97_add_columns_to_customer.py  ebfb85774dc1_customer_table.py  ec2ab885264a_role_model_mixin.py
models/: customer.py  mixin.py  role.py  user.py
