[project]
name = "fsa-rabac"
version = "0.1.0"
description = "FastAPI+SQLModel+Alembic+JWT rabac authentication and authorization"
authors = [
    {name = "Gabriel Martin del Campo y Eternod", email = "gmartindelcye@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "sqlmodel>=0.0.11",
    "alembic>=1.12.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.24.0.post1",
    "bcrypt>=4.0.1",
    "psycopg-binary>=3.1.12",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "autoimport>=1.3.3",
    "black>=23.11.0",
]
